--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="fixed-top">
     <nav class="navbar navbar-expand-lg bg-light">
       <div class="container-fluid">
-        <img class="image-top" src="/images/Logo image.png" style="height: 60px;">
+        <img class="image-top" src="./images/Logo image.png" style="height: 60px;">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
               <a class="nav-link active" aria-current="page" href="#"><b>Login</b></a>
             </li>
             <li class="nav-item">
-              <img class="image-top" src="/images/Clinick image.jpeg" style="height: 50px; border-radius: 50px;">
+              <img class="image-top" src="./images/Clinick image.jpeg" style="height: 50px; border-radius: 50px;">
   
             </li>
   
@@ -69,13 +69,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/images/wg2.png" class="d-block w-100" alt="...">
+          <img src="./images/wg2.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/images/Tiktok account.png" class="d-block w-100" alt="...">
+          <img src="./images/Tiktok account.png" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="/images/Facbook image.png" class="d-block w-100" alt="...">
+          <img src="./images/Facbook image.png" class="d-block w-100" alt="...">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -99,7 +99,7 @@
 
         <div class="col-12 col-md-3 col-lg-3">
           <div class="card" style="width: 100%;">
-            <img src="images/S1.jpg" class="card-img-top" alt="..." style="width: 100%;">
+            <img src="./images/S1.jpg" class="card-img-top" alt="..." style="width: 100%;">
             <div class="card-body">
               <!-- Scrollable modal -->
               <div class="modal-body">
@@ -174,7 +174,7 @@
 
         <div class="col-12 col-md-3 col-lg-3">
           <div class="card" style="width: 100%;">
-            <img src="/images/S2.jpg" class="card-img-top" alt="..." style="width: 100%;">
+            <img src="./images/S2.jpg" class="card-img-top" alt="..." style="width: 100%;">
             <div class="card-body">
               <!-- Scrollable modal -->
               <div class="modal-body">
@@ -243,7 +243,7 @@
 
         <div class="col-12 col-md-3 col-lg-3">
           <div class="card" style="width: 100%;">
-            <img src="/images/S3.jpg" class="card-img-top" alt="...">
+            <img src="./images/S3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <!-- Scrollable modal -->
               <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
@@ -309,7 +309,7 @@
 
         <div class="col-12 col-md-3 col-lg-3">
           <div class="card" style="width: 100%;">
-            <img src="/images/S4.jpg" class="card-img-top" alt="...">
+            <img src="./images/S4.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <!-- Scrollable modal -->
               <!-- Button trigger modal -->
@@ -392,28 +392,28 @@
         <div class="col-lg-3 col-sm-6 col-md-3">
           <div class="card" style="height: 50vh;">
             <video controls="" style="height: 50vh;">
-              <source src="/images/v1.mp4">
+              <source src="./images/v1.mp4">
             </video>
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-3">
           <div class="card" style="height: 50vh;">
             <video controls="" style="height: 50vh;">
-              <source src="/images/v2.mp4">
+              <source src="./images/v2.mp4">
             </video>
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-3">
           <div class="card" style="height: 50vh;">
             <video controls="" style="height: 50vh;">
-              <source src="/images/v3.mp4">
+              <source src="./images/v3.mp4">
             </video>
           </div>
         </div>
         <div class="col-lg-3 col-sm-6 col-md-3">
           <div class="card" style="height: 50vh; border: 1px solid gray;padding-left: 5px;">
             <video controls="" style="height: 50vh; width: 100%; ">
-              <source src="/images/v4.mp4">
+              <source src="./images/v4.mp4">
             </video>
           </div>
         </div>
